adds source URL as html comment

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,6 +6,7 @@
     <title>TOP - Project Recipes - Lasagna</title>
 </head>
 <body>
+    <!-- source: https://www.allrecipes.com/recipe/23600/worlds-best-lasagna -->
     <h1>World's Best Lasagna</h1>
 </body>
 </html>
