puts image in page with label

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,5 +8,7 @@
 <body>
     <!-- source: https://www.allrecipes.com/recipe/23600/worlds-best-lasagna -->
     <h1>World's Best Lasagna</h1>
+    <img src="../images/23600-worlds-best-lasagna-armag-4x3.jpg" style="height: 200px;" name="recipe_image" />
+    <label for="recipe_image">Credit:All Recipes - What your lasanga could look like!</label>
 </body>
 </html>
