--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,8 +10,10 @@
     <h1>World's Best Lasagna</h1>
     <img src="../images/23600-worlds-best-lasagna-armag-4x3.jpg" style="height: 200px;" name="recipe_image" />
     <label for="recipe_image">Credit:All Recipes - What your lasanga could look like!</label>
-    <p>
-        <h2>Ingredients</h2>
+    <h2>Description:</h2>
+    <p>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</p>
+    <p>When John Chandler submitted this lasagna recipe to Allrecipes more than 20 years ago, he had no idea how successful it would become. One of our top-performing recipes of all time, World's Best Lasagna racks up more than 7 million views per year and has ranked among the most popular lasagna recipes on the internet for two decades. Unfortunately, John unexpectedly passed away at 53 years old &dash; <a href="https://www.allrecipes.com/longform/john-chandler-worlds-best-lasagna/" target="_blank">read all about his life and legacy here.</a></read></p>
+        <h2>General Ingredients:</h2>
         <ul>
             <li>Meat: This super meaty lasagna has sweet Italian sausage and lean ground beef.</li>
             <li>Onion and garlic: An onion and two cloves of garlic are cooked with the meat to add tons of flavor.</li>
@@ -22,6 +24,35 @@
             <li>Cheeses: Parmesan, mozzarella, and ricotta cheese make this lasagna extra decadent.</li> 
             <li>Egg: An egg helps bind the ricotta so it doesn't ooze out of the lasagna when you cut into it.</li>   
         </ul>
+    </p>
+    <p><h2>Detailed Ingredients:</h2>
+        <ul>
+            <li>1 pound sweet Italian sausage</li>
+            <li>¾ pound lean ground beef</li>                
+            <li>½ cup minced onion</li>
+            <li>2 cloves garlic, crushed</li>
+            <li>1 (28 ounce) can crushed tomatoes</li>
+            <li>2 (6.5 ounce) cans canned tomato sauce</li>
+            <li>2 (6 ounce) cans tomato paste</li>
+            <li>½ cup water</li>
+            <li>2 tablespoons white sugar</li>
+            <li>4 tablespoons chopped fresh parsley, divided</li>
+            <li>1 ½ teaspoons dried basil leaves</li>
+            <li>1 ½ teaspoons salt, divided, or to taste</li>
+            <li>1 teaspoon Italian seasoning</li>
+            <li>½ teaspoon fennel seeds</li>
+            <li>¼ teaspoon ground black pepper</li>
+            <li>12 lasagna noodles</li>
+            <li>16 ounces ricotta cheese</li>
+            <li>1 egg</li>
+            <li>¾ pound mozzarella cheese, sliced</li>
+            <li>¾ cup grated Parmesan cheese</li>
+        </ul>
+    </p>
+    <p><h2>Step by Step Instructions:</h2>
+        <ol>
+            <li></li>
+        </ol>
     </p>
 </body>
 </html>
