--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -12,7 +12,7 @@
     <label for="recipe_image">Credit:All Recipes - What your lasanga could look like!</label>
     <h2>Description:</h2>
     <p>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</p>
-    <p>When John Chandler submitted this lasagna recipe to Allrecipes more than 20 years ago, he had no idea how successful it would become. One of our top-performing recipes of all time, World's Best Lasagna racks up more than 7 million views per year and has ranked among the most popular lasagna recipes on the internet for two decades. Unfortunately, John unexpectedly passed away at 53 years old &dash; <a href="https://www.allrecipes.com/longform/john-chandler-worlds-best-lasagna/" target="_blank">read all about his life and legacy here.</a></read></p>
+    <p>When John Chandler submitted this lasagna recipe to Allrecipes more than 20 years ago, he had no idea how successful it would become. One of our top-performing recipes of all time, World's Best Lasagna racks up more than 7 million views per year and has ranked among the most popular lasagna recipes on the internet for two decades. Unfortunately, John unexpectedly passed away at 53 years old &dash; <a href="https://www.allrecipes.com/longform/john-chandler-worlds-best-lasagna/" target="_blank">read all about his life and legacy here.</a></p>
         <h2>General Ingredients:</h2>
         <ul>
             <li>Meat: This super meaty lasagna has sweet Italian sausage and lean ground beef.</li>
