--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">World's Best Lasagna</a>
+    <ul>
+        <li><a href="recipes/lasagna.html">World's Best Lasagna</a></li>
+        <li><a href="recipes/buttered_noodles.html">Buttered Noodles</a></li>
+    </ul>
+    
 </body>
 </html>
