--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,6 +6,7 @@
     <title>TOP - Project Recipes - Lasagna</title>
 </head>
 <body>
+    <a href="../index.html">Back to List</a>
     <!-- source: https://www.allrecipes.com/recipe/23600/worlds-best-lasagna -->
     <h1>World's Best Lasagna</h1>
     <img src="../images/23600-worlds-best-lasagna-armag-4x3.jpg" style="height: 200px;" name="recipe_image" />
