--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="recipes/lasagna.html">World's Best Lasagna</a></li>
         <li><a href="recipes/buttered_noodles.html">Buttered Noodles</a></li>
+        <li><a href="recipes/skillet_macaroni_and_cheese.html">Skillet Macaroni and Cheese</a></li>
     </ul>
     
 </body>
