--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TOP - Project Recipes</title>
+    <link rel="stylesheet" href="styles/default.css" />
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/lasagna.html">World's Best Lasagna</a></li>
-        <li><a href="recipes/buttered_noodles.html">Buttered Noodles</a></li>
-        <li><a href="recipes/skillet_macaroni_and_cheese.html">Skillet Macaroni and Cheese</a></li>
-    </ul>
-    
+    <div class="wrapper home">
+        <h1>Odin Recipes</h1>
+        <ul class="nav_links">
+            <li><a href="recipes/lasagna.html">World's Best Lasagna</a></li>
+            <li><a href="recipes/buttered_noodles.html">Buttered Noodles</a></li>
+            <li><a href="recipes/skillet_macaroni_and_cheese.html">Skillet Macaroni and Cheese</a></li>
+        </ul>
+    </div>
 </body>
 </html>
