--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -12,7 +12,7 @@
         <!-- source: https://www.allrecipes.com/recipe/23600/worlds-best-lasagna -->
         <h1>World's Best Lasagna</h1>
         <div class="recipe_pic">
-            <img src="../images/23600-worlds-best-lasagna-armag-4x3.jpg" style="height: 300px;" name="recipe_image" /><br>
+            <img src="../images/23600-worlds-best-lasagna-armag-4x3.jpg" name="recipe_image" /><br>
             <label for="recipe_image">Credit: <em>All Recipes - What your lasanga could look like!</em></label>
         </div>
         <h2>Description:</h2>
