adds styling to mac and cheese recipe

--- a/recipes/skillet_macaroni_and_cheese.html
+++ b/recipes/skillet_macaroni_and_cheese.html
@@ -4,41 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TOP - Project Recipes - Skillet Macaroni and Cheese</title>
+    <link rel="stylesheet" href="../styles/default.css" />
 </head>
 <body>
-    <a href="../index.html">Back to List</a>
-    <!-- source: https://www.allrecipes.com/recipe/8465707/skillet-macaroni-and-cheese/ -->
-    <h1>Skillet Macaroni and Cheese</h1>
-    <img src="../images/8465707-skillet-macaroni-and-cheese.jpg" style="height: 200px;" name="recipe_image" />
-    <label for="recipe_image">Credit: N/A </label>
-    <h2>Description:</h2>
-    <p>Ditch the boxed stuff with this easy to make mac and cheese. With just a handful of ingredients it can be ready faster than boxed macaroni.</p>
-    <p>Macaroni and Cheese is often regarded as a comfort food for the not-well-to-do. While true, it's also a comfort food for just about anyone who thoroughly enjoys the texture of moist, squishy noodles and far too much cheese. You know who you are.</p>
-        <h2>General Ingredients:</h2>
-        <!-- Editorial note, the source recipe didn't have a "general ingredients" list, so I possibly might have embellished here -->
-        <ul>
-            <li>Noodles: Macaroni recipes call for "elbow" style noodles, but I suppose you could use any noodles you have on hand. Maybe hit up the grocery store real quick, and look for "hollow, semi-circle tubes", can't miss 'em.</li>
-            <li>Cheese: Colby Cheese tends to be the go to for this dish, but you can experiment with other soft/metlable cheeses. More cheese = less sad. Want some spice? Use pepper jack. </li>
-            <li>Cream: heavy cream will help with making the cheese more smooth and velvety. Remember that moist, squishiness earlier? This does all that. Maybe go easy on this.</li>
-            <li>Evaporated milk: I don't know, it's mac and cheese, this seemingly helps the dish taste less like your sadness and more like creamy happiness. If that's your thing.</li>
-        </ul>
-    </p>
-    <p><h2>Detailed Ingredients:</h2>
-        <ul>
-            <li>6 ounces macaroni</li>
-            <li>water to cover</li>                
-            <li>1 (5 ounce) can evaporated milk</li>
-            <li>1 ounce heavy cream</li>
-            <li>6 ounces grated Colby cheese</li>
-        </ul>
-    </p>
-    <p><h2>Step by Step Instructions:</h2>
-        <ol>
-            <li>Gather all your ingredients (<em>and feelings</em>).</li>
-            <!-- Editorial note, the source recipe didn't have a "mise-en-place" step, there are like 5 total ingredients, but it's important to remind the sad folks to gather their feelings and ingredients before starting to cook -->
-            <li>Place a medium skillet over medium-high heat. Pour in dry macaroni noodles. Pour in enough water to barely cover macaroni. Bring to a boil, stirring continuously. </li>
-            <li>Continue stirring the macaroni until water is almost evaporated and pasta is tender yet firm to the bite, about 8 minutes. Pour in evaporated milk and cream. Add grated cheese and stir until cheese has melted and everything is well combined. Serve immediately.</li>
-        </ol>
-    </p>
+    <div class="wrapper recipe">
+        <a href="../index.html">Back to List</a>
+        <!-- source: https://www.allrecipes.com/recipe/8465707/skillet-macaroni-and-cheese/ -->
+        <h1>Skillet Macaroni and Cheese</h1>
+        <div class="recipe_pic">
+            <img src="../images/8465707-skillet-macaroni-and-cheese.jpg" name="recipe_image" />
+            <br>
+            <label for="recipe_image">Credit: <em>N/A</em></label> 
+        </div>
+        <h2>Description:</h2>
+        <p>Ditch the boxed stuff with this easy to make mac and cheese. With just a handful of ingredients it can be ready faster than boxed macaroni.</p>
+        <p>Macaroni and Cheese is often regarded as a comfort food for the not-well-to-do. While true, it's also a comfort food for just about anyone who thoroughly enjoys the texture of moist, squishy noodles and far too much cheese. You know who you are.</p>
+            <h2>General Ingredients:</h2>
+            <!-- Editorial note, the source recipe didn't have a "general ingredients" list, so I possibly might have embellished here -->
+            <ul>
+                <li>Noodles: Macaroni recipes call for "elbow" style noodles, but I suppose you could use any noodles you have on hand. Maybe hit up the grocery store real quick, and look for "hollow, semi-circle tubes", can't miss 'em.</li>
+                <li>Cheese: Colby Cheese tends to be the go to for this dish, but you can experiment with other soft/metlable cheeses. More cheese = less sad. Want some spice? Use pepper jack. </li>
+                <li>Cream: heavy cream will help with making the cheese more smooth and velvety. Remember that moist, squishiness earlier? This does all that. Maybe go easy on this.</li>
+                <li>Evaporated milk: I don't know, it's mac and cheese, this seemingly helps the dish taste less like your sadness and more like creamy happiness. If that's your thing.</li>
+            </ul>
+        </p>
+        <p><h2>Detailed Ingredients:</h2>
+            <ul>
+                <li>6 ounces macaroni</li>
+                <li>water to cover</li>                
+                <li>1 (5 ounce) can evaporated milk</li>
+                <li>1 ounce heavy cream</li>
+                <li>6 ounces grated Colby cheese</li>
+            </ul>
+        </p>
+        <p><h2>Step by Step Instructions:</h2>
+            <ol>
+                <li>Gather all your ingredients (<em>and feelings</em>).</li>
+                <!-- Editorial note, the source recipe didn't have a "mise-en-place" step, there are like 5 total ingredients, but it's important to remind the sad folks to gather their feelings and ingredients before starting to cook -->
+                <li>Place a medium skillet over medium-high heat. Pour in dry macaroni noodles. Pour in enough water to barely cover macaroni. Bring to a boil, stirring continuously. </li>
+                <li>Continue stirring the macaroni until water is almost evaporated and pasta is tender yet firm to the bite, about 8 minutes. Pour in evaporated milk and cream. Add grated cheese and stir until cheese has melted and everything is well combined. Serve immediately.</li>
+            </ol>
+        </p>
+    </div>
 </body>
 </html>
